# demperm-social

./: .gitignore  README.md
docs/: ALIRE  (+3 more)
src/serveur/social/: .env.example  .gitignore  COMPLETION_REPORT.md  DEVELOPMENT_GUIDE.md  Dockerfile  ENDPOINTS_IMPLEMENTED.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FIREBASE_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  INDEX.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  QUICK_START.md  README.md  SERVICES_IMPLEMENTED.md  SUMMARY.md  Specifications3.md  TEMPLATES.md  TESTING_GUIDE.md  TESTS_STATUS.md  VERIFICATION_SPECS.md  check_endpoints.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_register.py
src/serveur/social/.github/workflows/: ci.yml
src/serveur/social/api/: manage.py
src/serveur/social/api/apps/: __init__.py
src/serveur/social/api/apps/admin_panel/: apps.py  response_utils.py  serializers.py  urls.py  views.py  views_domains.py  views_moderation.py  views_reports.py  views_stats.py  views_tags.py
src/serveur/social/api/apps/auth/: serializers.py  urls.py
src/serveur/social/api/apps/authentication/: apps.py  urls.py  views.py
src/serveur/social/api/apps/blocks/: apps.py  serializers.py  views.py
src/serveur/social/api/apps/comments/: apps.py  serializers.py  urls.py  views.py
src/serveur/social/api/apps/custom_auth/: authentication.py  serializers.py  urls.py  views.py
src/serveur/social/api/apps/custom_messages/: serializers.py  urls.py  views.py
src/serveur/social/api/apps/domains/: apps.py  serializers.py  urls.py  views.py
src/serveur/social/api/common/: exceptions.py  permissions.py  rate_limiters.py  utils.py  validators.py
src/serveur/social/api/conf/: asgi.py  urls.py  wsgi.py
src/serveur/social/api/db/: admin.py  apps.py  authentication.py  models.py  serializers.py
src/serveur/social/api/django/: settings.py
src/serveur/social/api/django_custom/: settings.py
src/serveur/social/api/tests/: conftest.py
src/serveur/social/app/social/: asgi.py  settings.py  urls.py  wsgi.py
src/serveur/social/social_api/admin_panel/: __init__.py  permissions.py  serializers.py  urls.py  views.py
src/serveur/social/social_api/authentication/: views.py
src/serveur/social/social_api/blocks/: __init__.py  serializers.py  urls.py  views.py
src/serveur/social/social_api/comments/: serializers.py  urls.py  views.py
src/serveur/social/social_api/core/: admin.py  authentication.py  middleware.py  models.py  permissions.py
src/serveur/social/social_api/domains/: urls.py  views.py
src/serveur/social/social_api/followers/: serializers.py  urls.py  views.py
src/serveur/social/social_api/forums/: serializers.py  urls.py  views.py
src/serveur/social/social_api/friends/: urls.py  views.py
src/serveur/social/social_api/groups/: urls.py  views.py
src/serveur/social/social_api/likes/: __init__.py  serializers.py  views.py
src/serveur/social/social_api/messages/: urls.py  views.py
src/serveur/social/social_api/messaging/: serializers.py  urls.py  views.py
src/serveur/social/social_api/posts/: serializers.py  urls.py  views.py
src/serveur/social/social_api/reports/: __init__.py  serializers.py  views.py
src/serveur/social/social_api/social_api/: settings.py  urls.py
src/serveur/social/social_api/subscriptions/: serializers.py  urls.py  views.py
src/serveur/social/social_api/tags/: serializers.py  urls.py  views.py
src/serveur/social/social_api/topics/: urls.py  views.py
src/serveur/social/social_api/users/: serializers.py  urls.py  views.py
(+137 files in other folders)
